--- a/TP_Gestion/MainWindow.xaml
+++ b/TP_Gestion/MainWindow.xaml
@@ -15,13 +15,6 @@
             <ColumnDefinition Width="230"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="D E S I G N   T H E   I N T E R F A C E"
-                   Foreground="#525965"
-                   FontFamily="Fonts/#Orbitron Medium"
-                   FontSize="10"
-                   VerticalAlignment="Bottom"
-                   HorizontalAlignment="Right"
-                   Margin="0,0,15,10" />
 
         <Border Background="{StaticResource SecondaryColor}"
                 Height="15"
@@ -200,7 +193,9 @@
                     </MenuItem.Icon>
                     
                     <MenuItem Header="Ver Productos"
-                              Template="{StaticResource Item_Template}">
+                              Template="{StaticResource Item_Template}"
+                              Name="menuItem_VerProductos"
+                              Click="menuItem_VerProductos_Click">
 
                         <MenuItem.Icon>
 
@@ -211,7 +206,9 @@
                     </MenuItem>
 
                     <MenuItem Header="Crear Productos"
-                              Template="{StaticResource Item_Template}">
+                              Template="{StaticResource Item_Template}"
+                              Name="menuItem_CrearProductos"
+                              Click="menuItem_CrearProductos_Click">
 
                         <MenuItem.Icon>
 
